Removed: package id from error response body
