# app/common/application/controllers/error_responses/error_response.py
@@ -2,7 +2,6 @@ from abc import ABC
 
 
 class ErrorResponse(ABC):
-    package_id: str
     http_code: int
     status_code: str
     message: str
